properly update ranges of declarations we reuse (i.e. encounter)

BUG: 281668